add more prerequisites in user guide